# lumpybumpy

./: LICENSE  pyproject.toml
example/: simple.py
src/lumpybumpy/: algebra.py  anomaly.py  celestial.py  kepler.py  lagrange.py
