[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumpybumpy"
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "NumPy",
    "SciPy",
    "MatPlotLib"
]

[tools.setuptools]
package-dir = {"" = "src" }

[tools.setuptools.packages.find]
where = ["src"]
